--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="password_text">Password</string>
     <string name="registration_text">Registration</string>
     <string name="remind_password">Remind password</string>
+    <string name="success_login">Login success</string>
+    <string name="invalid_login">Invalid login or password</string>
+    <string name="user_not_found">User not found</string>
+    <string name="unknown_error">Unknown error</string>
+    <string name="network_error">Network error</string>
+    <string name="success_signup">Signup success</string>
+    <string name="bad_parameters">Bad parameters</string>
+    <string name="email_taken">Email has already been taken</string>
+    <string name="signup_text">Signup</string>
+    <string name="phone_text">Phone</string>
+    <string name="email_text">Email</string>
+    <string name="name_text">Name</string>
 </resources>
