--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,21 @@
 <resources>
     <string name="app_name">ProjectX</string>
     <string name="error_occured">Произошла ошибка!</string>
-    <string name="artists_search">Поиск артистов</string>
-    <string name="my_messages">Мои сообщения</string>
-    <string name="settings">Настройки</string>
-    <string name="login_text">Login</string>
-    <string name="password_text">Password</string>
-    <string name="registration_text">Registration</string>
-    <string name="remind_password">Remind password</string>
-    <string name="success_login">Login success</string>
-    <string name="invalid_login">Invalid login or password</string>
-    <string name="user_not_found">User not found</string>
-    <string name="unknown_error">Unknown error</string>
-    <string name="network_error">Network error</string>
-    <string name="success_signup">Signup success</string>
-    <string name="bad_parameters">Bad parameters</string>
-    <string name="email_taken">Email has already been taken</string>
-    <string name="signup_text">Signup</string>
-    <string name="phone_text">Phone</string>
+    <string name="login_text">Логин</string>
+    <string name="password_text">Пароль</string>
+    <string name="registration_text">Регистрация</string>
+    <string name="success_login">Успешный вход!</string>
+    <string name="invalid_login">Неверный логин или пароль</string>
+    <string name="user_not_found">Пользователь не найден</string>
+    <string name="unknown_error">Неизвестная ошибка</string>
+    <string name="network_error">Сетевая ошибка</string>
+    <string name="success_signup">Успешная регистрация</string>
+    <string name="bad_parameters">Неверные параметры</string>
+    <string name="email_taken">Email уже занят</string>
+    <string name="signup_text">Регистрация</string>
+    <string name="phone_text">Телефон</string>
     <string name="email_text">Email</string>
-    <string name="name_text">Name</string>
+    <string name="name_text">Имя</string>
     <string name="title">Название</string>
     <string name="description">Описание</string>
     <string name="price_in_rub">Цена (руб)</string>
@@ -27,9 +23,8 @@
     <string name="save">Сохранить</string>
     <string name="fill_all_fields">Заполните все поля!</string>
     <string name="add_service">Добавить услугу</string>
-    <string name="logout">Logout</string>
-    <string name="authorization">Authorization</string>
-    <string name="new_service">New service</string>
-    <string name="registration">Registration</string>
+    <string name="authorization">Авторизация</string>
+    <string name="new_service">Новая услуга</string>
+    <string name="registration">Регистрация</string>
     <string name="choose_photo">Выберите фото</string>
 </resources>
