--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,5 @@
     <string name="new_service">Новая услуга</string>
     <string name="registration">Регистрация</string>
     <string name="choose_photo">Выберите фото</string>
-    <string name="rub_per_service">\\u20BD / усл.</string>
+    <string name="rub_per_service">\u20BD / усл.</string>
 </resources>
