--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,9 @@
     <string name="new_service">Новая услуга</string>
     <string name="registration">Регистрация</string>
     <string name="choose_photo">Выберите фото</string>
-    <string name="rub_per_service">\u20BD / усл.</string>
+    <string name="rub_per_service">\u20BD</string>
     <string name="need_permission">Необходимо разрешение на доступ к хранилищу</string>
+    <string name="connect_with_author">Связаться</string>
     <string name="all_services">Все артисты</string>
     <string name="my_services">Мои услуги</string>
 </resources>
